--- a/app/css/demo.scss
+++ b/app/css/demo.scss
@@ -1,3 +1,76 @@
-.bg {
-    background: red;
+$transition-time: 0.15s;
+body {
+  font-family: 'Open Sans', sans-serif;
+  text-align: center;
+}
+
+.container {
+  width: 600px;
+  display: inline-block;
+  vertical-align: top;
+  text-align: center;
+}
+
+.accordion {
+  text-align: left;
+  list-style: none;
+  li {
+    margin: 3px 0px;
+    &.selected {
+      .accordion-header {
+        border: 1px solid #0066ff;
+      }
+      .accordion-body {
+        border-top: 1px solid transparent;
+      }
+    }
+    &:not(.selected) {
+      .accordion-header {
+        color: #000;
+        background-color: #fff;
+        border: 1px solid #ccc;
+        border-bottom-left-radius: 5px;
+        border-bottom-right-radius: 5px;
+        &:hover {
+          background-color: #f1f1f1;
+        }
+      }
+      .accordion-body {
+        transition: all ease $transition-time;
+        border: 1px solid transparent;
+        & > div {
+          transition: all linear $transition-time;
+          max-height: 0;
+          margin: 0;
+          opacity: 0;
+          overflow: hidden;
+        }
+      }
+    }
+    .accordion-header {
+      padding: 8px 15px;
+      background-color: rgb(0, 127, 255);
+      color: #fff;
+      cursor: pointer;
+      border-top-left-radius: 5px;
+      border-top-right-radius: 5px;
+      .accordion-arrow {
+        background-repeat: no-repeat;
+        width: 10px;
+        display: inline-block;
+        text-align: right;
+        margin-right: 5px;
+      }
+    }
+    .accordion-body {
+      border: 1px solid #ccc;
+      border-bottom-left-radius: 5px;
+      border-bottom-right-radius: 5px;
+      & > div {
+        transition: all linear $transition-time;
+        margin: 25px 0px;
+        padding: 0px 35px;
+      }
+    }
+  }
 }
